Fixed issues we identified in preliminary test. Path navigation works, no actions fail because unreachable or out of range. Agents performing pretty well right now.